# RuaDB

./: .gitignore  Cargo.toml  build.rs
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
config/: default.toml
sql/: SQL.txt  bug_bak.rsql  main.py  small.rsql  test.rsql
src/: executor.rs  main.rs  settings.rs  sql.rs
src/ast/: mod.rs
src/bytevec/: macros.rs  mod.rs  traits.rs
src/bytevec/impls/: collections.rs  primitives.rs
src/db/: def.rs
src/executor/: executor.rs  mod.rs
src/index/: btree.rs  in_file.rs  mod.rs  tmp.rs
src/logger/: logger.rs
src/parser/: ast.rs  lrsql.lalrpop  lrsql.rs  mod.rs  sql.rs  tok.rs
src/parser_bak/: lrsql.lalrpop  mod.rs  sql.rs
src/parser_bak/tok/: mod.rs
src/rm/: file_handler.rs  in_file.rs  mod.rs  pagedef.rs  record.rs  record_manager.rs  table_handler.rs
src/rm/filesystem/: mod.rs  pagedef.rs
src/rm/filesystem/bufmanager/: buf_page_manager.rs  find_replace.rs  mod.rs
src/rm/filesystem/fileio/: file_manager.rs  mod.rs
src/rm/filesystem/utils/: bitmap.rs  hashmap.rs  linklist.rs  mod.rs
src/sm/: check.rs  convert.rs  mod.rs  query_tree.rs  system_manager.rs
src/tok/: mod.rs
src/utils/: bit.rs  convert.rs  file.rs  macro.rs  macros.rs  mod.rs  random.rs  string.rs
