[package]
name = "rua_db"
version = "0.1.0"
authors = ["euxcet <zcc.qwer@gmail.com>"]
build = "build.rs"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
rand = "0.7.2"
config = "0.9.3"
serde_derive = "^1.0.8"
serde = "^1.0.8"
